  implementations of the fnmatch(), setlocale() and glob() functions. 
  Reported by Laurent gaffie. (Ilia)
- Fixed imagerectangle regression with 1x1 rectangle (libgd #106). (Pierre)
- Fixed htmlentities/htmlspecialchars not to accept partial multibyte
  sequences. (Stas)

- Fixed bug #42785 (json_encode() formats doubles according to locale rather  
  then following standard syntax). (Ilia)
- Fixed bug #42767 (highlight_string() truncates trailing comment). (Ilia)
- Fixed bug #42739 (mkdir() doesn't like a trailing slash when safe_mode is 
  enabled). (Ilia)
- Fixed bug #42699 (PHP_SELF duplicates path). (Dmitry)
- Fixed bug #42643 (CLI segfaults if using ATTR_PERSISTENT). (Ilia)
- Fixed bug #42629 (Dynamically loaded PHP extensions need symbols exported
  on MacOSX). (jdolecek at NetBSD dot org)
- Fixed bug #42627 (bz2 extension fails to build with -fno-common).
  (dolecek at netbsd dot org)
- Fixed Bug #42596 (session.save_path MODE option does not work). (Ilia)
- Fixed bug #42590 (Make the engine recognize \v and \f escape sequences). 
  (Ilia)
- Fixed bug #42587 (behavior change regarding symlinked .php files). (Dmitry)
- Fixed bug #42579 (apache_reset_timeout() does not exist). (Jani)
- Fixed bug #42549 (ext/mysql failed to compile with libmysql 3.23). (Scott)
- Fixed bug #42523 (PHP_SELF duplicates path). (Dmitry)
- Fixed bug #42512 (ip2long('255.255.255.255') should return 4294967295 on
  64-bit PHP). (Derick)
- Fixed bug #42506 (php_pgsql_convert() timezone parse bug) (nonunnet at
  gmail dot com, Ilia)
- Fixed bug #42462 (Segmentation when trying to set an attribute in a 
  DOMElement). (Rob)
- Fixed bug #42453 (CGI SAPI does not shut down cleanly with -i/-m/-v cmdline
  options). (Dmitry)
- Fixed bug #42452 (PDO classes do not expose Reflection API information).
  (Hannes)
- Fixed bug #42468 (Write lock on file_get_contents fails when using a 
  compression stream). (Ilia)
- Fixed bug #42488 (SoapServer reports an encoding error and the error itself