@@ -34,6 +34,8 @@ PHP                                                                        NEWS
 
 - Fixed bug #42785 (json_encode() formats doubles according to locale rather  
   then following standard syntax). (Ilia)
+- Fixed bug #42772 (Storing $this in a static var fails while handling a cast
+  to string). (Dmitry)
 - Fixed bug #42767 (highlight_string() truncates trailing comment). (Ilia)
 - Fixed bug #42739 (mkdir() doesn't like a trailing slash when safe_mode is 
   enabled). (Ilia)
